fixes sideways scrolling issue on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ body {
   justify-content: flex-end;
   padding: 10px;
   height: 80vh;
-  width: 100%;
+  max-width: 100%;
   border-radius: 12px;
   border: 1px solid rgb(0, 255, 0);
   overflow-y: hidden;
@@ -191,7 +191,7 @@ button {
     height: 20%;
     padding: 0;
     margin: 0;
-    width: 95%;
+    max-width: 100%;
   }
 
   #console div {
